@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-30T08:16:15Z",
+  "timestamp" : "2022-06-30T16:17:27Z",
   "count_outdated" : 367,
   "uniques_outdated" : 198,
-  "count" : 388,
-  "uniques" : 211,
+  "count" : 389,
+  "uniques" : 212,
   "clones" : [
     {
       "timestamp": "2022-06-16T00:00:00Z",
@@ -93,6 +93,13 @@
       "timestamp": "2022-06-29T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
